# utl

./: .buildinfo  .clang-format  .clang-tidy.in  .gitignore  .gitlab-ci.yml  .pkg  CMakeLists.txt  README.md  format-check.sh  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: linux.yml  main.yml  run-tests.yml  unix.yml  windows.yml
_sources/: index.md.txt
catch/: CMakeLists.txt
catch/include/catch/: catch.hpp
cmake/: clang-tidy.cmake  pkg.cmake
docs/: CMakeLists.txt  Doxyfile  README.md  conf.py  index.md  index.rst  requirements.txt
doctrees/: environment.pickle  index.doctree
html/: .buildinfo  index.html  objects.inv  search.html  searchindex.js
include/common/: append.h  concat.h  erase.h  erase_if.h  parallel_for.h
include/utl/: cflow.h  clear_t.h  cmd_line_parser.h  concat.h  const_str.h  enumerate.h  equal_ranges.h  equal_ranges_linear.h  erase.h  erase_duplicates.h  erase_if.h  file_utils.h  for_each_bit_set.h  for_each_line_in_file.h  forward_type.h  generator.h  get_or_create.h  get_or_create_index.h  init_from.h  inner_join.h  insert_sorted.h  is_uniform.h  iterator_facade.h  join.h  logging.h  match.h  memory_usage.h  memory_usage_monitor.h  memory_usage_printer.h  nwise.h  overloaded.h  pairwise.h  parallel_for.h  pipes.h  pool.h  power_set_intersection.h  printable_enum.h  progress_tracker.h  raii.h  read_file.h  (+12 more)
include/utl/helpers/: algorithm.h
include/utl/parser/: arg_parser.h  buf_reader.h  buffer.h  cstr.h  csv.h  csv_range.h  file.h  line_range.h  mmap_reader.h  mmap_reader_msvc.h  mmap_reader_unix.h  split.h  util.h
include/utl/pipes/: accumulate.h  all.h  avg.h  count.h  emplace_back.h  find.h  flatten.h  for_each.h  generate.h  insert.h  iota.h  is_range.h  iterable.h  make_range.h  map.h  max.h  range.h  remove_if.h  sum.h  take_after.h  take_while.h  to_vec.h  transform.h  unique.h  vec.h
include/utl/serialization/: buf.h  file.h  offset_t.h  serialization.h  string.h  unique_ptr.h  vector.h
include/utl/struct/: arity.h  comparable.h  for_each_field.h  for_each_member.h  printable.h  to_tuple.h
src/: logging.cc  memory_usage.cc  progress_tracker.cc  timer.cc
test/: catch.hpp  cmd_line_parser_test.cc  comparable_test.cc  for_each_field_test.cc  init_from_test.cc  is_uniform_test.cc  join_test.cc  logging_test.cc  match_test.cc  pairwise_test.cc  parallel_for_test.cc  power_set_intersection_test.cc  printable_enum.cc  printable_test.cc  progress_tracker_test.cc  sorted_diff_test.cc  sql_example_test.cc  string_literal.h  to_tuple_test.cc  zip_test.cc
test/parser/: arg_parser.cc  arg_parser_test.cc  cstr.cc  cstr_cr_test.cc  cstr_test.cc  csv_cr.cc  csv_cr_test.cc  csv_test.cc  pipe_csv_test.cc  split_test.cc
test/pipes/: avg_test.cc  count_test.cc  flatten_test.cc  max_test.cc  take_after_test.cc
test/serialize/: custom_struct_test.cc  file_test.cc  graph_serialize_test.cc  pointer_test.cc  string_test.cc  struct_serialize_test.cc
test/sql/: create_table.h  sql_example_test.cc  string_literal.h
tools/: run-clang-tidy.py
