project(utl)
cmake_minimum_required(VERSION 3.16)

option(UTL_LINT "Run clang-tidy with the compiler." OFF)
if(UTL_LINT)
  include(cmake/clang-tidy.cmake)
endif()

find_package(Boost)

include(cmake/pkg.cmake)
add_subdirectory(catch)

add_library(utl INTERFACE)
target_link_libraries(utl INTERFACE fmt-header-only)
target_include_directories(utl INTERFACE include)
target_include_directories(utl SYSTEM INTERFACE ${Boost_INCLUDE_DIR})
target_compile_options(utl INTERFACE -D_SCL_SECURE_NO_WARNINGS=1)
target_compile_features(utl INTERFACE cxx_std_17)

file(GLOB_RECURSE utl-test-files test/*.cc)
if (MSVC)
  file(GLOB_RECURSE zip-test test/zip_test.cc)
  list(REMOVE_ITEM utl-test-files ${zip-test})
endif()
add_executable(utl-test ${utl-test-files})
target_link_libraries(utl-test utl catch)
if (NOT MSVC)
  target_compile_options(utl-test PRIVATE -Wall -Wextra -Werror)
endif()