project(utl)
cmake_minimum_required(VERSION 3.20)

option(UTL_LINT "Run clang-tidy with the compiler." OFF)
if(UTL_LINT)
  include(cmake/clang-tidy.cmake)
endif()

include(cmake/pkg.cmake)

file(GLOB_RECURSE utl-files src/*.cc)

add_library(utl STATIC ${utl-files})
target_link_libraries(utl PUBLIC fmt-header-only cista)
target_include_directories(utl PUBLIC include)
target_compile_options(utl PUBLIC -D_SCL_SECURE_NO_WARNINGS=1)
target_compile_features(utl PUBLIC cxx_std_20)
if (MSVC)
  target_compile_definitions(utl PUBLIC NOMINMAX)
endif()

file(GLOB_RECURSE utl-test-files test/*.cc)
if (MSVC)
  file(GLOB_RECURSE zip-test test/zip_test.cc)
  list(REMOVE_ITEM utl-test-files ${zip-test})
endif()
add_executable(utl-test ${utl-test-files})
target_link_libraries(utl-test utl gtest gmock gtest_main)
if (NOT MSVC)
  target_compile_options(utl-test PRIVATE -Wall -Wextra -Werror)
endif()
